name:                stagger-haskell
version:             0.1.0.0
synopsis:            Stagger reporter client in Haskell.
description:         Stagger reporter client in Haskell.
license:             BSD3
author:              Daniel Waterworth
maintainer:          daniel@pusher.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       attoparsec           == 0.12.*,
                       base                 == 4.*,
                       blaze-builder        == 0.4.*,
                       bytestring           == 0.10.*,
                       cereal               == 0.4.*,
                       containers           == 0.5.*,
                       deepseq              == 1.3.*,
                       errors               == 1.4.*,
                       hashable             == 1.2.*,
                       pusher-messagepack   == 0.4.*,
                       mtl                  == 2.1.*,
                       stm                  == 2.4.*,
                       text                 == 1.2.*,
                       semigroups           == 0.16.*,
                       transformers         == 0.3.*,
                       unordered-containers == 0.2.*,
                       zeromq3-haskell      == 0.5.*
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Stagger,
                       Stagger.Counter,
                       Stagger.Dist
  other-modules:       Stagger.Util

executable example
  build-depends:      base                  == 4.*,
                      stagger-haskell,
                      random                == 1.0.*
  default-extensions: OverloadedStrings
  default-language:   Haskell2010
  ghc-options:         -Wall
  ghc-prof-options:    -threaded -rtsopts -prof -auto-all -caf-all
  hs-source-dirs:     example
  main-is:            Main.hs
