name:                stagger-haskell
version:             0.1.0.2
synopsis:            Stagger reporter client in Haskell.
description:         Stagger reporter client in Haskell.
license:             BSD3
author:              Daniel Waterworth
maintainer:          daniel@pusher.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       attoparsec           == 0.12.*,
                       base                 == 4.*,
                       blaze-builder        == 0.4.*,
                       bytestring,
                       cereal               == 0.4.*,
                       containers,
                       deepseq,
                       errors               >= 1.4     && < 2.1,
                       hashable             == 1.2.*,
                       pusher-messagepack   == 0.4.*,
                       mtl,
                       stm,
                       text,
                       semigroups           == 0.16.*,
                       transformers,
                       unordered-containers == 0.2.*,
                       zeromq3-haskell      == 0.5.*
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Stagger,
                       Stagger.Counter,
                       Stagger.Dist
  other-modules:       Stagger.Util

executable example
  build-depends:      base                  == 4.*,
                      stagger-haskell,
                      random
  default-extensions: OverloadedStrings
  default-language:   Haskell2010
  ghc-options:         -Wall
  ghc-prof-options:    -threaded -rtsopts -prof -auto-all -caf-all
  hs-source-dirs:     example
  main-is:            Main.hs
