name:                stagger-haskell
version:             0.2.0.2
synopsis:            Stagger reporter client in Haskell.
description:         Stagger reporter client in Haskell.
license:             BSD3
author:              Daniel Waterworth <daniel@pusher.com>, Will Sewell <will@pusher.com>
maintainer:          Will Sewell <will@pusher.com>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base                 == 4.*,
                       blaze-builder        == 0.4.*,
                       bytestring,
                       cereal               >= 0.4     && < 0.6,
                       containers,
                       deepseq,
                       errors               >= 1.4     && < 2.2,
                       hashable             == 1.2.*,
                       messagepack          == 0.5.*,
                       mtl,
                       network              ==2.6.*,
                       stm,
                       text,
                       semigroups           >= 0.16    && < 0.19,
                       transformers,
                       unordered-containers == 0.2.*
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Stagger,
                       Stagger.Counter,
                       Stagger.Dist,
                       Stagger.Protocol,
                       Stagger.SocketUtil
  other-modules:       Stagger.Util

executable example
  build-depends:      base                  == 4.*,
                      stagger-haskell,
                      random
  default-extensions: OverloadedStrings
  default-language:   Haskell2010
  ghc-options:         -Wall
  ghc-prof-options:    -threaded -rtsopts -prof -auto-all -caf-all
  hs-source-dirs:     example
  main-is:            Main.hs
